WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130349
[Mac] getAttributedSubstringFromRange arguments are incorrectly named
https://bugs.webkit.org/show_bug.cgi?id=130349
Summary
[Mac] getAttributedSubstringFromRange arguments are incorrectly named
Alexey Proskuryakov
Reported
2014-03-17 10:21:37 PDT
We pass range start and end, and implementation treats arguments as such, but they are named location/length.
Attachments
proposed fix
(6.12 KB, patch)
2014-03-17 10:24 PDT
,
Alexey Proskuryakov
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-03-17 10:24:05 PDT
Created
attachment 226937
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2014-03-17 13:21:33 PDT
Committed <
http://trac.webkit.org/r165750
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug